# schnipp

./: .bumpversion.cfg  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  tests.yml
docs/: conf.py  index.rst  modules.rst  requirements.txt  schnipp.rst
src/schnipp/: __init__.py  cli.py
