[metadata]
author = Florian Matter
author_email = fmatter@mailbox.org
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Cut ELAN audio into snippets.
keywords =
    elan
    linguistics
long_description = file: README.md
long_description_content_type = text/markdown
name = schnipp
project_urls =
    Bug Tracker = https://github.com/fmatter/schnipp/issues
url = https://github.com/fmatter/schnipp
version = 0.0.1.dev

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires = 
    colorlog
    pydub
    python-slugify
    click
    click-default-group


[options.entry_points]
console_scripts =
    schnipp=schnipp.cli:main


[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector==1.10.2
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
    flake8
    black
publishing =
    twine
    wheel

[options.packages.find]
include = schnipp, schnipp.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = schnipp
src_paths = schnipp,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source =
    schnipp

[coverage:report]
show_missing = true